# GitHub_Trending

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: weekly.yml
docs/: index.html
docs/assets/: style.css
docs/data/: latest.json
scripts/: run_weekly.py
src/: analyzer.py  collector.py  config.py  keywords.py  renderer.py
templates/: dashboard.html.j2
